amended primary wrapper margins for alignment. Solves #258

--- a/assets/scss/generic-overrides.scss
+++ b/assets/scss/generic-overrides.scss
@@ -118,6 +118,8 @@
 }
 
 #primary {
+  margin-left: 0;
+  margin-right: 0;
   h1, p, .nhsuk-pagination__page {
 	-ms-word-wrap : break-word;
 	word-wrap     : break-word;
